docs/version-1.10/modules/en/pages/installation-setup/os-distro/talos-linux.adoc
= Talos Linux
:description: Configure Talos Linux cluster nodes to support persistent storage for Kubernetes persistent volumes by enabling system extensions,.
:revdate: 2025-08-22
:page-revdate: {revdate}
:current-version: {page-component-version}

== Requirements

You must meet the following requirements before installing {longhorn-product-name} on a Talos Linux cluster.

=== System Extensions

Some {longhorn-product-name}-dependent binary executables are not present in the default Talos root filesystem. To have access to these binaries, Talos offers system extension mechanism to extend the installation.

* `siderolabs/iscsi-tools`: this extension enables `iscsid` daemon and `iscsiadm` to be available to all nodes for the Kubernetes persistent volumes operations.
* `siderolabs/util-linux-tools`: this extension enables linux tool to be available to all nodes. For example, the `fstrim` binary is used for {longhorn-product-name} volume trimming.

The most straightforward method is patching the extensions onto existing Talos Linux nodes.

[subs="+attributes",yaml]
----
customization:
  systemExtensions:
    officialExtensions:
      - siderolabs/iscsi-tools
      - siderolabs/util-linux-tools
----

For detailed instructions, see the Talos documentation on https://www.talos.dev/v1.6/talos-guides/configuration/system-extensions/[System Extensions] and https://www.talos.dev/v1.6/talos-guides/install/boot-assets/[Boot Assets].

=== Pod Security

{longhorn-product-name} requires pod security `enforce: "privileged"`.

By default, Talos Linux applies a `baseline` pod security profile across namespaces, except for the kube-system namespace. This default setting restricts {longhorn-product-name}'s ability to manage and access system resources. For more information, see xref:installation-setup/requirements.adoc#_root_and_privileged_permission[Root and Privileged Permission] and the Talos documentation on https://www.talos.dev/v1.6/kubernetes-guides/configuration/pod-security/[Pod Security].

== Talos Linux Versions Prior to v1.10.x

=== Data Path Mounts

You need provide additional data path mounts to be accessible to the Kubernetes Kubelet container.

These mounts are necessary to provide access to the host directories, and attach volumes required by Longhorn components.

The xref:longhorn-system/settings.adoc#_default_data_path[default data path] for {longhorn-product-name} is `/var/lib/longhorn`. In order to use the below configuration in Talos, we must first set our default data path to `/var/mnt/longhorn`. The method to do this will depend on your xref:longhorn-system/customize-default-settings.adoc[deployment method].

[,yaml]
----
machine:
  kubelet:
    extraMounts:
      - destination: /var/lib/longhorn
        type: bind
        source: /var/lib/longhorn
        options:
          - bind
          - rshared
          - rw
----

For detailed steps, see the Talos documentation on https://www.talos.dev/v1.6/talos-guides/configuration/editing-machine-configuration/[Editing Machine Configuration].


== V2 Data Engine

To use V2 volumes, all nodes must meet the V2 Data Engine xref:longhorn-system/v2-data-engine/prerequisites.adoc[prerequisites].

[,yaml]
----
machine:
  sysctls:
    vm.nr_hugepages: "1024"
  kernel:
    modules:
      - name: nvme_tcp
      - name: vfio_pci
#     - name: uio_pci_generic
----

[NOTE]
====
Talos Linux v1.7.x and earlier versions do not include the `uio_pci_generic` kernel module. If your system device supports `vfio_pci`, which is the preferred kernel module for SPDK application deployment, you are not required to install and enable the `uio_pci_generic` kernel driver. For more information, see https://spdk.io/doc/system_configuration.html[System Configuration User Guide] in the SPDK documentation.

You can use `uio_pci_generic` if `vfio_pci` is incompatible with your system or specific hardware. Future versions of Talos Linux are expected to include native support for `uio_pci_generic`. For more information, see https://github.com/siderolabs/talos/issues/9236[Issue #9236].
====

== Talos Linux Upgrades

=== Prior to v1.8.x

When https://www.talos.dev/v1.7/talos-guides/upgrading-talos/#talosctl-upgrade[upgrading a Talos Linux node], always include the `--preserve` option in the command. This option explicitly tells Talos to keep ephemeral data intact.

Example:

[subs="+attributes",console]
----
talosctl upgrade --nodes 10.20.30.40 --image ghcr.io/siderolabs/installer:v1.7.6 --preserve
----

CAUTION: If you do not include the `--preserve` option, Talos wipes `/var/lib/longhorn`, destroying all replicas stored on that node.

=== Recovering from an Upgraded Node without Preserving Data

If you were unable to include the `--preserve` option in the upgrade command, perform the following steps:

. On the {longhorn-product-name} UI, go to the *Nodes* screen.
. Select the upgraded node, and then select *Edit node and disks* in the *Operation* menu.
. On the *Edit Node and Disks* screen, set *Scheduling* to *Disable*, delete the disk, and then click *Save*.
. Select the upgraded node again, and then select *Edit node and disks* in the *Operation* menu.
. On the *Edit Node and Disks* screen, add a disk and configure the following settings:
 ** *Path*: Specify `/var/lib/longhorn/`.
 ** *Storage Reserved*: Specify a value that matches your requirements. The default value is *30 Gi*.
 ** *Scheduling*: Select *Enable*.
. Click *Save*.

{longhorn-product-name} synchronizes the replicas based on the configured settings.

=== After v1.8.x

The `--preserve` is no longer required. The flag is automatically set for `talosctl upgrade` command.  
For more information, see https://www.talos.dev/v1.8/introduction/what-is-new/#upgrades[here].

== Talos Linux v1.10.x and Later

=== Data Path Mounts

Because Talos Linux deprecated `.machine.disks` we recommend using `UserVolumeConfig` to mount a disk for {longhorn-product-name}. Refer to the https://www.talos.dev/v1.10/introduction/what-is-new/#user-volumes[What's new in Talos v1.10] for more information.

You can optionally create a `VolumeConfig` object to specify the size of Talos System volumes.  
This step is *recommended* to avoid setting the `defaultSettings.storageReservedPercentageForDefaultDisk` value manually.

[TIP]
====
For additional disk configuration options, refer to the https://www.talos.dev/v1.10/talos-guides/configuration/disk-management/#disk-layout[Disk Layout documentation].
====

You need provide additional data path mounts to be accessible to the Kubernetes Kubelet container.

These mounts are necessary to provide access to the host directories, and attach volumes required by Longhorn components.

[,yaml]
----
machine:
  kubelet:
    extraMounts:
      - destination: /var/mnt/longhorn
        type: bind
        source: /var/mnt/longhorn
        options:
          - bind
          - rshared
          - rw
----

You need to create a `UserVolumeConfig` to mount the disk for {longhorn-product-name}, which will be automatically mounted to `/var/mnt/longhorn` on the configured node.

[,yaml]
----
apiVersion: v1alpha1
kind: UserVolumeConfig
name: longhorn # Name is used to identify the volume at /var/mnt/<name>
provisioning:
  diskSelector:
    match: disk.transport == "nvme"
  grow: false
  maxSize: 1700GB
----

For detailed instructions on `UserVolumeConfig` and `VolumeConfig`, see the https://www.talos.dev/v1.10/reference/configuration/block/[Talos block configuration documentation].

== References

* https://github.com/longhorn/longhorn/issues/3161[[FEATURE\] Talos support]
